--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,13 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    
+    services:
+      mongodb:
+        image: mongo:6
+        ports:
+          - 27017:27017
+    
     steps:
     - uses: actions/checkout@v4
 
@@ -26,3 +33,5 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      env:
+        MONGODB_URI: mongodb://localhost:27017
